# libcoap-demo

./: .gitmodules  readme.md
simple-server/: CMakeLists.txt  coap_config.h  simple-server.c
socket-demo/: .gitignore  CMakeLists.txt  client.c  server.c
socket-example/: CMakeLists.txt  test_client.c  test_getaddrinfo.c  test_keyboard.c  test_select_server.c  test_server.c
tiny-server-client/: CMakeLists.txt  client.c  server.c
